parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR_LITERAL
    NUM
    STRING_LITERAL

Grammar

Rule 0     S' -> start
Rule 1     start -> package_declaration imports_declaration class_declaration
Rule 2     package_declaration -> PACKAGE NAME ;
Rule 3     imports_declaration -> imports_declaration import_declaration
Rule 4     imports_declaration -> import_declaration
Rule 5     import_declaration -> IMPORT STATIC NAME ;
Rule 6     import_declaration -> IMPORT STATIC NAME * ;
Rule 7     import_declaration -> IMPORT NAME ;
Rule 8     import_declaration -> IMPORT NAME * ;
Rule 9     class_declaration -> modifiers CLASS NAME extends_declaration implement_declarations { class_body_elements }
Rule 10    extends_declaration -> EXTENDS NAME
Rule 11    extends_declaration -> <empty>
Rule 12    implement_declarations -> IMPLEMENTS interfaces
Rule 13    implement_declarations -> <empty>
Rule 14    interfaces -> NAME , interfaces
Rule 15    interfaces -> NAME
Rule 16    class_body_elements -> class_body_elements class_body_element
Rule 17    class_body_elements -> class_body_element
Rule 18    class_body_element -> field_declaration
Rule 19    class_body_element -> method_declaration
Rule 20    class_body_element -> constructor_declaration
Rule 21    class_body_element -> BLOCK_COMMENT
Rule 22    class_body_element -> LINE_COMMENT
Rule 23    method_declaration -> modifiers VOID NAME ( ) throws_declaration { }
Rule 24    method_declaration -> modifiers VOID NAME ( arguments_declaration ) throws_declaration { }
Rule 25    method_declaration -> modifiers NAME NAME ( ) throws_declaration { }
Rule 26    method_declaration -> modifiers NAME NAME ( arguments_declaration ) throws_declaration { }
Rule 27    method_declaration -> modifiers primitive_type NAME ( ) throws_declaration { }
Rule 28    method_declaration -> modifiers primitive_type NAME ( arguments_declaration ) throws_declaration { }
Rule 29    throws_declaration -> THROWS NAME
Rule 30    throws_declaration -> <empty>
Rule 31    constructor_declaration -> modifiers NAME ( ) { }
Rule 32    constructor_declaration -> modifiers NAME ( arguments_declaration ) { }
Rule 33    arguments_declaration -> argument , arguments_declaration
Rule 34    arguments_declaration -> argument
Rule 35    argument -> primitive_type NAME
Rule 36    argument -> NAME NAME
Rule 37    field_declaration -> primitive_type_declaration
Rule 38    field_declaration -> list_type_declaration
Rule 39    field_declaration -> having_type_declaration
Rule 40    field_declaration -> array_type_declaration
Rule 41    primitive_type_declaration -> modifiers primitive_type NAME ;
Rule 42    list_type_declaration -> modifiers NAME < NAME > NAME ;
Rule 43    having_type_declaration -> modifiers NAME NAME ;
Rule 44    array_type_declaration -> modifiers primitive_type [ ] NAME ;
Rule 45    array_type_declaration -> modifiers primitive_type NAME [ ] ;
Rule 46    array_type_declaration -> modifiers NAME [ ] NAME ;
Rule 47    array_type_declaration -> modifiers NAME NAME [ ] ;
Rule 48    primitive_type -> INT
Rule 49    primitive_type -> FLOAT
Rule 50    primitive_type -> SHORT
Rule 51    primitive_type -> CHAR
Rule 52    primitive_type -> STRING
Rule 53    primitive_type -> BYTE
Rule 54    primitive_type -> LONG
Rule 55    primitive_type -> DOUBLE
Rule 56    primitive_type -> BOOLEAN
Rule 57    modifiers -> modifier
Rule 58    modifiers -> modifiers modifier
Rule 59    modifier -> PUBLIC
Rule 60    modifier -> PROTECTED
Rule 61    modifier -> PRIVATE
Rule 62    modifier -> STATIC
Rule 63    modifier -> ABSTRACT
Rule 64    modifier -> FINAL
Rule 65    modifier -> <empty>

Terminals, with rules where they appear

(                    : 23 24 25 26 27 28 31 32
)                    : 23 24 25 26 27 28 31 32
*                    : 6 8
,                    : 14 33
;                    : 2 5 6 7 8 41 42 43 44 45 46 47
<                    : 42
>                    : 42
ABSTRACT             : 63
BLOCK_COMMENT        : 21
BOOLEAN              : 56
BYTE                 : 53
CHAR                 : 51
CHAR_LITERAL         : 
CLASS                : 9
DOUBLE               : 55
EXTENDS              : 10
FINAL                : 64
FLOAT                : 49
IMPLEMENTS           : 12
IMPORT               : 5 6 7 8
INT                  : 48
LINE_COMMENT         : 22
LONG                 : 54
NAME                 : 2 5 6 7 8 9 10 14 15 23 24 25 25 26 26 27 28 29 31 32 35 36 36 41 42 42 42 43 43 44 45 46 46 47 47
NUM                  : 
PACKAGE              : 2
PRIVATE              : 61
PROTECTED            : 60
PUBLIC               : 59
SHORT                : 50
STATIC               : 5 6 62
STRING               : 52
STRING_LITERAL       : 
THROWS               : 29
VOID                 : 23 24
[                    : 44 45 46 47
]                    : 44 45 46 47
error                : 
{                    : 9 23 24 25 26 27 28 31 32
}                    : 9 23 24 25 26 27 28 31 32

Nonterminals, with rules where they appear

argument             : 33 34
arguments_declaration : 24 26 28 32 33
array_type_declaration : 40
class_body_element   : 16 17
class_body_elements  : 9 16
class_declaration    : 1
constructor_declaration : 20
extends_declaration  : 9
field_declaration    : 18
having_type_declaration : 39
implement_declarations : 9
import_declaration   : 3 4
imports_declaration  : 1 3
interfaces           : 12 14
list_type_declaration : 38
method_declaration   : 19
modifier             : 57 58
modifiers            : 9 23 24 25 26 27 28 31 32 41 42 43 44 45 46 47 58
package_declaration  : 1
primitive_type       : 27 28 35 41 44 45
primitive_type_declaration : 37
start                : 0
throws_declaration   : 23 24 25 26 27 28

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . package_declaration imports_declaration class_declaration
    (2) package_declaration -> . PACKAGE NAME ;

    PACKAGE         shift and go to state 3

    start                          shift and go to state 1
    package_declaration            shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> package_declaration . imports_declaration class_declaration
    (3) imports_declaration -> . imports_declaration import_declaration
    (4) imports_declaration -> . import_declaration
    (5) import_declaration -> . IMPORT STATIC NAME ;
    (6) import_declaration -> . IMPORT STATIC NAME * ;
    (7) import_declaration -> . IMPORT NAME ;
    (8) import_declaration -> . IMPORT NAME * ;

    IMPORT          shift and go to state 6

    imports_declaration            shift and go to state 4
    import_declaration             shift and go to state 5

state 3

    (2) package_declaration -> PACKAGE . NAME ;

    NAME            shift and go to state 7


state 4

    (1) start -> package_declaration imports_declaration . class_declaration
    (3) imports_declaration -> imports_declaration . import_declaration
    (9) class_declaration -> . modifiers CLASS NAME extends_declaration implement_declarations { class_body_elements }
    (5) import_declaration -> . IMPORT STATIC NAME ;
    (6) import_declaration -> . IMPORT STATIC NAME * ;
    (7) import_declaration -> . IMPORT NAME ;
    (8) import_declaration -> . IMPORT NAME * ;
    (57) modifiers -> . modifier
    (58) modifiers -> . modifiers modifier
    (59) modifier -> . PUBLIC
    (60) modifier -> . PROTECTED
    (61) modifier -> . PRIVATE
    (62) modifier -> . STATIC
    (63) modifier -> . ABSTRACT
    (64) modifier -> . FINAL
    (65) modifier -> .

  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
  ! shift/reduce conflict for ABSTRACT resolved as shift
  ! shift/reduce conflict for FINAL resolved as shift
    IMPORT          shift and go to state 6
    PUBLIC          shift and go to state 13
    PROTECTED       shift and go to state 14
    PRIVATE         shift and go to state 15
    STATIC          shift and go to state 11
    ABSTRACT        shift and go to state 16
    FINAL           shift and go to state 17
    CLASS           reduce using rule 65 (modifier -> .)

  ! PUBLIC          [ reduce using rule 65 (modifier -> .) ]
  ! PROTECTED       [ reduce using rule 65 (modifier -> .) ]
  ! PRIVATE         [ reduce using rule 65 (modifier -> .) ]
  ! STATIC          [ reduce using rule 65 (modifier -> .) ]
  ! ABSTRACT        [ reduce using rule 65 (modifier -> .) ]
  ! FINAL           [ reduce using rule 65 (modifier -> .) ]

    class_declaration              shift and go to state 8
    import_declaration             shift and go to state 9
    modifiers                      shift and go to state 10
    modifier                       shift and go to state 12

state 5

    (4) imports_declaration -> import_declaration .

    IMPORT          reduce using rule 4 (imports_declaration -> import_declaration .)
    PUBLIC          reduce using rule 4 (imports_declaration -> import_declaration .)
    PROTECTED       reduce using rule 4 (imports_declaration -> import_declaration .)
    PRIVATE         reduce using rule 4 (imports_declaration -> import_declaration .)
    STATIC          reduce using rule 4 (imports_declaration -> import_declaration .)
    ABSTRACT        reduce using rule 4 (imports_declaration -> import_declaration .)
    FINAL           reduce using rule 4 (imports_declaration -> import_declaration .)
    CLASS           reduce using rule 4 (imports_declaration -> import_declaration .)


state 6

    (5) import_declaration -> IMPORT . STATIC NAME ;
    (6) import_declaration -> IMPORT . STATIC NAME * ;
    (7) import_declaration -> IMPORT . NAME ;
    (8) import_declaration -> IMPORT . NAME * ;

    STATIC          shift and go to state 18
    NAME            shift and go to state 19


state 7

    (2) package_declaration -> PACKAGE NAME . ;

    ;               shift and go to state 20


state 8

    (1) start -> package_declaration imports_declaration class_declaration .

    $end            reduce using rule 1 (start -> package_declaration imports_declaration class_declaration .)


state 9

    (3) imports_declaration -> imports_declaration import_declaration .

    IMPORT          reduce using rule 3 (imports_declaration -> imports_declaration import_declaration .)
    PUBLIC          reduce using rule 3 (imports_declaration -> imports_declaration import_declaration .)
    PROTECTED       reduce using rule 3 (imports_declaration -> imports_declaration import_declaration .)
    PRIVATE         reduce using rule 3 (imports_declaration -> imports_declaration import_declaration .)
    STATIC          reduce using rule 3 (imports_declaration -> imports_declaration import_declaration .)
    ABSTRACT        reduce using rule 3 (imports_declaration -> imports_declaration import_declaration .)
    FINAL           reduce using rule 3 (imports_declaration -> imports_declaration import_declaration .)
    CLASS           reduce using rule 3 (imports_declaration -> imports_declaration import_declaration .)


state 10

    (9) class_declaration -> modifiers . CLASS NAME extends_declaration implement_declarations { class_body_elements }
    (58) modifiers -> modifiers . modifier
    (59) modifier -> . PUBLIC
    (60) modifier -> . PROTECTED
    (61) modifier -> . PRIVATE
    (62) modifier -> . STATIC
    (63) modifier -> . ABSTRACT
    (64) modifier -> . FINAL
    (65) modifier -> .

  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
  ! shift/reduce conflict for ABSTRACT resolved as shift
  ! shift/reduce conflict for FINAL resolved as shift
    CLASS           shift and go to state 21
    PUBLIC          shift and go to state 13
    PROTECTED       shift and go to state 14
    PRIVATE         shift and go to state 15
    STATIC          shift and go to state 11
    ABSTRACT        shift and go to state 16
    FINAL           shift and go to state 17

  ! CLASS           [ reduce using rule 65 (modifier -> .) ]
  ! PUBLIC          [ reduce using rule 65 (modifier -> .) ]
  ! PROTECTED       [ reduce using rule 65 (modifier -> .) ]
  ! PRIVATE         [ reduce using rule 65 (modifier -> .) ]
  ! STATIC          [ reduce using rule 65 (modifier -> .) ]
  ! ABSTRACT        [ reduce using rule 65 (modifier -> .) ]
  ! FINAL           [ reduce using rule 65 (modifier -> .) ]

    modifier                       shift and go to state 22

state 11

    (62) modifier -> STATIC .

    CLASS           reduce using rule 62 (modifier -> STATIC .)
    PUBLIC          reduce using rule 62 (modifier -> STATIC .)
    PROTECTED       reduce using rule 62 (modifier -> STATIC .)
    PRIVATE         reduce using rule 62 (modifier -> STATIC .)
    STATIC          reduce using rule 62 (modifier -> STATIC .)
    ABSTRACT        reduce using rule 62 (modifier -> STATIC .)
    FINAL           reduce using rule 62 (modifier -> STATIC .)
    VOID            reduce using rule 62 (modifier -> STATIC .)
    NAME            reduce using rule 62 (modifier -> STATIC .)
    INT             reduce using rule 62 (modifier -> STATIC .)
    FLOAT           reduce using rule 62 (modifier -> STATIC .)
    SHORT           reduce using rule 62 (modifier -> STATIC .)
    CHAR            reduce using rule 62 (modifier -> STATIC .)
    STRING          reduce using rule 62 (modifier -> STATIC .)
    BYTE            reduce using rule 62 (modifier -> STATIC .)
    LONG            reduce using rule 62 (modifier -> STATIC .)
    DOUBLE          reduce using rule 62 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 62 (modifier -> STATIC .)


state 12

    (57) modifiers -> modifier .

    CLASS           reduce using rule 57 (modifiers -> modifier .)
    PUBLIC          reduce using rule 57 (modifiers -> modifier .)
    PROTECTED       reduce using rule 57 (modifiers -> modifier .)
    PRIVATE         reduce using rule 57 (modifiers -> modifier .)
    STATIC          reduce using rule 57 (modifiers -> modifier .)
    ABSTRACT        reduce using rule 57 (modifiers -> modifier .)
    FINAL           reduce using rule 57 (modifiers -> modifier .)
    VOID            reduce using rule 57 (modifiers -> modifier .)
    NAME            reduce using rule 57 (modifiers -> modifier .)
    INT             reduce using rule 57 (modifiers -> modifier .)
    FLOAT           reduce using rule 57 (modifiers -> modifier .)
    SHORT           reduce using rule 57 (modifiers -> modifier .)
    CHAR            reduce using rule 57 (modifiers -> modifier .)
    STRING          reduce using rule 57 (modifiers -> modifier .)
    BYTE            reduce using rule 57 (modifiers -> modifier .)
    LONG            reduce using rule 57 (modifiers -> modifier .)
    DOUBLE          reduce using rule 57 (modifiers -> modifier .)
    BOOLEAN         reduce using rule 57 (modifiers -> modifier .)


state 13

    (59) modifier -> PUBLIC .

    CLASS           reduce using rule 59 (modifier -> PUBLIC .)
    PUBLIC          reduce using rule 59 (modifier -> PUBLIC .)
    PROTECTED       reduce using rule 59 (modifier -> PUBLIC .)
    PRIVATE         reduce using rule 59 (modifier -> PUBLIC .)
    STATIC          reduce using rule 59 (modifier -> PUBLIC .)
    ABSTRACT        reduce using rule 59 (modifier -> PUBLIC .)
    FINAL           reduce using rule 59 (modifier -> PUBLIC .)
    VOID            reduce using rule 59 (modifier -> PUBLIC .)
    NAME            reduce using rule 59 (modifier -> PUBLIC .)
    INT             reduce using rule 59 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 59 (modifier -> PUBLIC .)
    SHORT           reduce using rule 59 (modifier -> PUBLIC .)
    CHAR            reduce using rule 59 (modifier -> PUBLIC .)
    STRING          reduce using rule 59 (modifier -> PUBLIC .)
    BYTE            reduce using rule 59 (modifier -> PUBLIC .)
    LONG            reduce using rule 59 (modifier -> PUBLIC .)
    DOUBLE          reduce using rule 59 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 59 (modifier -> PUBLIC .)


state 14

    (60) modifier -> PROTECTED .

    CLASS           reduce using rule 60 (modifier -> PROTECTED .)
    PUBLIC          reduce using rule 60 (modifier -> PROTECTED .)
    PROTECTED       reduce using rule 60 (modifier -> PROTECTED .)
    PRIVATE         reduce using rule 60 (modifier -> PROTECTED .)
    STATIC          reduce using rule 60 (modifier -> PROTECTED .)
    ABSTRACT        reduce using rule 60 (modifier -> PROTECTED .)
    FINAL           reduce using rule 60 (modifier -> PROTECTED .)
    VOID            reduce using rule 60 (modifier -> PROTECTED .)
    NAME            reduce using rule 60 (modifier -> PROTECTED .)
    INT             reduce using rule 60 (modifier -> PROTECTED .)
    FLOAT           reduce using rule 60 (modifier -> PROTECTED .)
    SHORT           reduce using rule 60 (modifier -> PROTECTED .)
    CHAR            reduce using rule 60 (modifier -> PROTECTED .)
    STRING          reduce using rule 60 (modifier -> PROTECTED .)
    BYTE            reduce using rule 60 (modifier -> PROTECTED .)
    LONG            reduce using rule 60 (modifier -> PROTECTED .)
    DOUBLE          reduce using rule 60 (modifier -> PROTECTED .)
    BOOLEAN         reduce using rule 60 (modifier -> PROTECTED .)


state 15

    (61) modifier -> PRIVATE .

    CLASS           reduce using rule 61 (modifier -> PRIVATE .)
    PUBLIC          reduce using rule 61 (modifier -> PRIVATE .)
    PROTECTED       reduce using rule 61 (modifier -> PRIVATE .)
    PRIVATE         reduce using rule 61 (modifier -> PRIVATE .)
    STATIC          reduce using rule 61 (modifier -> PRIVATE .)
    ABSTRACT        reduce using rule 61 (modifier -> PRIVATE .)
    FINAL           reduce using rule 61 (modifier -> PRIVATE .)
    VOID            reduce using rule 61 (modifier -> PRIVATE .)
    NAME            reduce using rule 61 (modifier -> PRIVATE .)
    INT             reduce using rule 61 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 61 (modifier -> PRIVATE .)
    SHORT           reduce using rule 61 (modifier -> PRIVATE .)
    CHAR            reduce using rule 61 (modifier -> PRIVATE .)
    STRING          reduce using rule 61 (modifier -> PRIVATE .)
    BYTE            reduce using rule 61 (modifier -> PRIVATE .)
    LONG            reduce using rule 61 (modifier -> PRIVATE .)
    DOUBLE          reduce using rule 61 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 61 (modifier -> PRIVATE .)


state 16

    (63) modifier -> ABSTRACT .

    CLASS           reduce using rule 63 (modifier -> ABSTRACT .)
    PUBLIC          reduce using rule 63 (modifier -> ABSTRACT .)
    PROTECTED       reduce using rule 63 (modifier -> ABSTRACT .)
    PRIVATE         reduce using rule 63 (modifier -> ABSTRACT .)
    STATIC          reduce using rule 63 (modifier -> ABSTRACT .)
    ABSTRACT        reduce using rule 63 (modifier -> ABSTRACT .)
    FINAL           reduce using rule 63 (modifier -> ABSTRACT .)
    VOID            reduce using rule 63 (modifier -> ABSTRACT .)
    NAME            reduce using rule 63 (modifier -> ABSTRACT .)
    INT             reduce using rule 63 (modifier -> ABSTRACT .)
    FLOAT           reduce using rule 63 (modifier -> ABSTRACT .)
    SHORT           reduce using rule 63 (modifier -> ABSTRACT .)
    CHAR            reduce using rule 63 (modifier -> ABSTRACT .)
    STRING          reduce using rule 63 (modifier -> ABSTRACT .)
    BYTE            reduce using rule 63 (modifier -> ABSTRACT .)
    LONG            reduce using rule 63 (modifier -> ABSTRACT .)
    DOUBLE          reduce using rule 63 (modifier -> ABSTRACT .)
    BOOLEAN         reduce using rule 63 (modifier -> ABSTRACT .)


state 17

    (64) modifier -> FINAL .

    CLASS           reduce using rule 64 (modifier -> FINAL .)
    PUBLIC          reduce using rule 64 (modifier -> FINAL .)
    PROTECTED       reduce using rule 64 (modifier -> FINAL .)
    PRIVATE         reduce using rule 64 (modifier -> FINAL .)
    STATIC          reduce using rule 64 (modifier -> FINAL .)
    ABSTRACT        reduce using rule 64 (modifier -> FINAL .)
    FINAL           reduce using rule 64 (modifier -> FINAL .)
    VOID            reduce using rule 64 (modifier -> FINAL .)
    NAME            reduce using rule 64 (modifier -> FINAL .)
    INT             reduce using rule 64 (modifier -> FINAL .)
    FLOAT           reduce using rule 64 (modifier -> FINAL .)
    SHORT           reduce using rule 64 (modifier -> FINAL .)
    CHAR            reduce using rule 64 (modifier -> FINAL .)
    STRING          reduce using rule 64 (modifier -> FINAL .)
    BYTE            reduce using rule 64 (modifier -> FINAL .)
    LONG            reduce using rule 64 (modifier -> FINAL .)
    DOUBLE          reduce using rule 64 (modifier -> FINAL .)
    BOOLEAN         reduce using rule 64 (modifier -> FINAL .)


state 18

    (5) import_declaration -> IMPORT STATIC . NAME ;
    (6) import_declaration -> IMPORT STATIC . NAME * ;

    NAME            shift and go to state 23


state 19

    (7) import_declaration -> IMPORT NAME . ;
    (8) import_declaration -> IMPORT NAME . * ;

    ;               shift and go to state 24
    *               shift and go to state 25


state 20

    (2) package_declaration -> PACKAGE NAME ; .

    IMPORT          reduce using rule 2 (package_declaration -> PACKAGE NAME ; .)


state 21

    (9) class_declaration -> modifiers CLASS . NAME extends_declaration implement_declarations { class_body_elements }

    NAME            shift and go to state 26


state 22

    (58) modifiers -> modifiers modifier .

    CLASS           reduce using rule 58 (modifiers -> modifiers modifier .)
    PUBLIC          reduce using rule 58 (modifiers -> modifiers modifier .)
    PROTECTED       reduce using rule 58 (modifiers -> modifiers modifier .)
    PRIVATE         reduce using rule 58 (modifiers -> modifiers modifier .)
    STATIC          reduce using rule 58 (modifiers -> modifiers modifier .)
    ABSTRACT        reduce using rule 58 (modifiers -> modifiers modifier .)
    FINAL           reduce using rule 58 (modifiers -> modifiers modifier .)
    VOID            reduce using rule 58 (modifiers -> modifiers modifier .)
    NAME            reduce using rule 58 (modifiers -> modifiers modifier .)
    INT             reduce using rule 58 (modifiers -> modifiers modifier .)
    FLOAT           reduce using rule 58 (modifiers -> modifiers modifier .)
    SHORT           reduce using rule 58 (modifiers -> modifiers modifier .)
    CHAR            reduce using rule 58 (modifiers -> modifiers modifier .)
    STRING          reduce using rule 58 (modifiers -> modifiers modifier .)
    BYTE            reduce using rule 58 (modifiers -> modifiers modifier .)
    LONG            reduce using rule 58 (modifiers -> modifiers modifier .)
    DOUBLE          reduce using rule 58 (modifiers -> modifiers modifier .)
    BOOLEAN         reduce using rule 58 (modifiers -> modifiers modifier .)


state 23

    (5) import_declaration -> IMPORT STATIC NAME . ;
    (6) import_declaration -> IMPORT STATIC NAME . * ;

    ;               shift and go to state 27
    *               shift and go to state 28


state 24

    (7) import_declaration -> IMPORT NAME ; .

    IMPORT          reduce using rule 7 (import_declaration -> IMPORT NAME ; .)
    PUBLIC          reduce using rule 7 (import_declaration -> IMPORT NAME ; .)
    PROTECTED       reduce using rule 7 (import_declaration -> IMPORT NAME ; .)
    PRIVATE         reduce using rule 7 (import_declaration -> IMPORT NAME ; .)
    STATIC          reduce using rule 7 (import_declaration -> IMPORT NAME ; .)
    ABSTRACT        reduce using rule 7 (import_declaration -> IMPORT NAME ; .)
    FINAL           reduce using rule 7 (import_declaration -> IMPORT NAME ; .)
    CLASS           reduce using rule 7 (import_declaration -> IMPORT NAME ; .)


state 25

    (8) import_declaration -> IMPORT NAME * . ;

    ;               shift and go to state 29


state 26

    (9) class_declaration -> modifiers CLASS NAME . extends_declaration implement_declarations { class_body_elements }
    (10) extends_declaration -> . EXTENDS NAME
    (11) extends_declaration -> .

    EXTENDS         shift and go to state 31
    IMPLEMENTS      reduce using rule 11 (extends_declaration -> .)
    {               reduce using rule 11 (extends_declaration -> .)

    extends_declaration            shift and go to state 30

state 27

    (5) import_declaration -> IMPORT STATIC NAME ; .

    IMPORT          reduce using rule 5 (import_declaration -> IMPORT STATIC NAME ; .)
    PUBLIC          reduce using rule 5 (import_declaration -> IMPORT STATIC NAME ; .)
    PROTECTED       reduce using rule 5 (import_declaration -> IMPORT STATIC NAME ; .)
    PRIVATE         reduce using rule 5 (import_declaration -> IMPORT STATIC NAME ; .)
    STATIC          reduce using rule 5 (import_declaration -> IMPORT STATIC NAME ; .)
    ABSTRACT        reduce using rule 5 (import_declaration -> IMPORT STATIC NAME ; .)
    FINAL           reduce using rule 5 (import_declaration -> IMPORT STATIC NAME ; .)
    CLASS           reduce using rule 5 (import_declaration -> IMPORT STATIC NAME ; .)


state 28

    (6) import_declaration -> IMPORT STATIC NAME * . ;

    ;               shift and go to state 32


state 29

    (8) import_declaration -> IMPORT NAME * ; .

    IMPORT          reduce using rule 8 (import_declaration -> IMPORT NAME * ; .)
    PUBLIC          reduce using rule 8 (import_declaration -> IMPORT NAME * ; .)
    PROTECTED       reduce using rule 8 (import_declaration -> IMPORT NAME * ; .)
    PRIVATE         reduce using rule 8 (import_declaration -> IMPORT NAME * ; .)
    STATIC          reduce using rule 8 (import_declaration -> IMPORT NAME * ; .)
    ABSTRACT        reduce using rule 8 (import_declaration -> IMPORT NAME * ; .)
    FINAL           reduce using rule 8 (import_declaration -> IMPORT NAME * ; .)
    CLASS           reduce using rule 8 (import_declaration -> IMPORT NAME * ; .)


state 30

    (9) class_declaration -> modifiers CLASS NAME extends_declaration . implement_declarations { class_body_elements }
    (12) implement_declarations -> . IMPLEMENTS interfaces
    (13) implement_declarations -> .

    IMPLEMENTS      shift and go to state 34
    {               reduce using rule 13 (implement_declarations -> .)

    implement_declarations         shift and go to state 33

state 31

    (10) extends_declaration -> EXTENDS . NAME

    NAME            shift and go to state 35


state 32

    (6) import_declaration -> IMPORT STATIC NAME * ; .
